--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -2237,6 +2237,7 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
     (use-package counsel
       :bind
       (:map org-mode-map
+       ([remap counsel-imenu] . counsel-org-goto)
        ([remap org-set-tags-command] . counsel-org-tag)))
 
     (use-package org-clock
