--- a/dotfiles.org
+++ b/dotfiles.org
@@ -154,7 +154,7 @@ Hide superfluous applications.
   Name=XDvi
 #+END_SRC
 
-* GNOME Shell app folders
+* GNOME catgen
 To apply configuration, run:
 
 #+BEGIN_SRC sh
